clusters/building-blocks/security/apps/pocket-id/app/pocket-id-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  namespace: security
  labels:
    app.kubernetes.io/name: pocket-id
spec:
  selector:
    app.kubernetes.io/name: pocket-id
  ports:
    - name: http
      port: 1411
      targetPort: http
      protocol: TCP
