clusters/building-blocks/security/apps/pocket-id/app/pocket-id-ingressroute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  namespace: security
  labels:
    app: pocket-id
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`id.${DOMAIN_NAME}`)
      priority: 10
      services:
        - kind: Service
          name: pocket-id
          namespace: security
          passHostHeader: true
          port: 1411
          scheme: http
